# Integration-Service

./: .gitignore
.github/workflows/: release.yml
core/: CHANGELOG.md  CMakeLists.txt  package.xml
core/cmake/: is_generate_export_header.cmake  is_install_middleware_plugin.cmake  is_mix_generator.cmake  is_mix_install_extension.cmake
core/include/is/utils/: Log.hpp
core/src/: Instance.cpp
core/src/runtime/: Search.cpp
utils/conversion/json-xtypes/: CMakeLists.txt
