<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>is-core</name>
  <version>3.1.0</version>
  <description>Integration Services core</description>
  <maintainer email="team@greenroomrobotics.com">Greenroom Robotics</maintainer>
  <license>UNLICENSED</license>
  <url type="website">https://github.com/Greenroom-Robotics/Integration-Service/tree/gr</url>

  <build_depend>xtypes</build_depend>
  <build_depend>libboost-program-options-dev</build_depend>
  <depend>yaml-cpp</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>